--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            background-image: url('https://media1.tenor.com/m/NDJLISUesWcAAAAd/scream-loud-scream.gif'); /* Example GIF URL */
+            background-size: cover; /* Cover the entire area */
+            background-position: center; /* Center the image */
             height: 100vh; /* Full viewport height */
             margin: 0;
         }
