--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             font-family: 'Press Start 2P', cursive;
             background-color: #f4f4f4;
-            color: #333;
+            color: #f63232;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -22,12 +22,13 @@
         }
         h1 {
             font-family: 'Press Start 2P', cursive; /* Updated font */
-            color: #4a90e2;
+            color: #e13232;
+            font-size: 100px;
             margin-bottom: 20px;
         }
         button {
-            background-color: #4a90e2;
-            color: white;
+            background-color: #f90000;
+            color: rgb(11, 11, 11);
             border: none;
             padding: 15px 30px;
             font-size: 1.2em;
@@ -38,7 +39,7 @@
             transition: background-color 0.3s;
         }
         button:hover {
-            background-color: #357ABD;
+            background-color: #ee7878;
         }
         #output {
             font-size: 1.5em;
