updates on the meme addition

--- a/index.html
+++ b/index.html
@@ -63,3 +63,7 @@
     <script src="app.js"></script>
 </body>
 </html>
+<img id="meme" src="app.js" alt="Meme" style="display:none; max-width: 100%; margin-top: 20px;">
+<div id="meme-container" style="position: relative;">
+    <img id="meme" src="" alt="Meme" style="display:none; max-width: 100%; margin-top: 20px; position: absolute; transition: opacity 0.5s;">
+</div>
