--- a/index.html
+++ b/index.html
@@ -53,6 +53,33 @@
             margin-top: 20px;
         }
     </style>
+    #popup {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: white;
+        border: 2px solid #333;
+        padding: 20px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+    }
+    #overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+    }
+    #waveform {
+        width: 100%;
+        height: 200px;
+        border: 1px solid #000;
+    }
 </head>
 <body>
     <h1>ScreAmOUT</h1>
